[gd_scene load_steps=8 format=2]

[ext_resource path="res://elementos/UI/indicador_nivel_1.png" type="Texture" id=1]
[ext_resource path="res://elementos/UI/pop_up_nivel_1.png" type="Texture" id=2]
[ext_resource path="res://recursos/Menu_principal/TelasExtras/Contador_de_Nivel.gd" type="Script" id=3]
[ext_resource path="res://elementos/UI/pop_up_nivel_2.png" type="Texture" id=4]
[ext_resource path="res://elementos/UI/pop_up_nivel_3.png" type="Texture" id=5]
[ext_resource path="res://elementos/UI/inidicador_nivel_3.png" type="Texture" id=6]
[ext_resource path="res://elementos/UI/indicador_nivel_2.png" type="Texture" id=7]

[node name="Nivel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
textura_indicador = [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 6 ) ]
textura_popup = [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ) ]

[node name="Indicador" type="TextureRect" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.5
margin_top = -37.0
margin_right = 143.5
margin_bottom = 37.0
mouse_filter = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="IndicadorTween" type="Tween" parent="Indicador"]

[node name="PopUp" type="TextureRect" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
mouse_filter = 0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="PopUpTween" type="Tween" parent="PopUp"]
